# reciclopedia

./: .buildpacks  .env  .gitignore  .travis.yml  Cargo.toml  Procfile  README.md  run-db
assets/html/: index.html
client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.css  App.tsx
migrations/2020-02-24-053948_create_recipes/: down.sql  up.sql
migrations/2020-02-24-053957_create_ingredients/: up.sql
migrations/2020-03-08-112334_create_recipe_ingredients/: up.sql
migrations/2020-03-28-162558_users/: up.sql
server/: .env  .gitignore  Cargo.toml
server/migrations/2020-03-08-112334_create_recipe_ingredients/: down.sql  up.sql
server/src/: routes.rs
server/src/handlers/: mod.rs  rejection.rs  user.rs
server/src/models/: cli.rs  graphql.rs  http.rs
server/src/repository/: recipe.rs
server/tests/: routes.rs
server/tests/common/: mod.rs
src/: db.rs  graphql.rs  handlers.rs  lib.rs  main.rs  models.rs  repository.rs  route.rs  routes.rs  schema.rs
src/handlers/: mod.rs  recipe.rs  user.rs
src/models/: graphql.rs  http.rs  mod.rs  postgres.rs
src/repository/: mod.rs  recipe.rs  user.rs
tests/: authentication.rs  common.rs  recipe.rs  recipes.rs  routes.rs  user.rs  users.rs
