[package]
name = "reciclopedia"
version = "0.1.0"
authors = ["Sven van Dam"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.6" , features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
juniper = "0.14.2"
juniper_warp = "0.5.2"
log = "0.4.8"
r2d2 = "0.8.8"
rand = "0.7.3"
rust-argon2 = "0.8.2"
serde = { version = "1.0.104", features = ["derive"] }
structopt = "0.3.12"
warp = "0.1.20"

#[dev-dependencies]
testcontainers = "0.9.1"
